--- a/src/main/resources/com/diegoribeiro/javafxws/DepartmentList.fxml
+++ b/src/main/resources/com/diegoribeiro/javafxws/DepartmentList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.diegoribeiro.javafxws.DepartmentListController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.diegoribeiro.javafxws.DepartmentListController">
    <children>
       <Label text="Department Registration">
          <font>
@@ -28,6 +28,7 @@
         <columns>
           <TableColumn fx:id="colIdDepartment" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="colNameDepartment" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
         </columns>
       </TableView>
    </children>
