--- a/src/main/resources/com/diegoribeiro/javafxws/SellerList.fxml
+++ b/src/main/resources/com/diegoribeiro/javafxws/SellerList.fxml
@@ -28,6 +28,9 @@
         <columns>
           <TableColumn fx:id="colIdSeller" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="colNameSeller" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="colEmailSeller" prefWidth="75.0" text="Email" />
+            <TableColumn fx:id="colBirthDateSeller" prefWidth="75.0" text="Birth Date" />
+            <TableColumn fx:id="colBaseSalarySeller" prefWidth="75.0" text="Base Salary" />
             <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
             <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
         </columns>
